Este commit aplicado adiciona o uso de Contains com o Dynamobd
