# Projetos/UsingDynamoWithAPI/swagger-output.json
@@ -89,6 +89,24 @@
           }
         }
       }
+    },
+    "/getcomContains": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "nome",
+            "in": "query",
+            "description": "Nome.",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   },
   "definitions": {
